blocks/k8s-core-concepts/code/k8s/ui/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  labels:
    app.kubernetes.io/name: ui-deployment
    app.kubernetes.io/instance: process-control
    app.kubernetes.io/version: "4.0.0"
    app.kubernetes.io/component: ui
    app.kubernetes.io/part-of: process-control
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ui
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ui
        app.kubernetes.io/part-of: process-control
    spec:
      containers:
      - name: ui
        image: quay.io/device-edge-workshops/process-control-ui-k8s:4.1.0
        ports:
          - containerPort: 1880
            name: ui-port
        resources:
          limits:
              memory: "250Mi"
              cpu: "100m"
