blocks/k8s-core-concepts/code/k8s/ui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  labels:
    app.kubernetes.io/name: ui-service
    app.kubernetes.io/instance: process-control
    app.kubernetes.io/part-of: process-control
spec:
  ports:
    - port: 1880
      protocol: TCP
      targetPort: 1880
  selector:
    app.kubernetes.io/name: ui
