blocks/k8s-core-concepts/code/k8s/ui/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hmi
  annotations:
    haproxy.router.openshift.io/rewrite-target: /ui
  labels:
    app.kubernetes.io/name: ui-route
    app.kubernetes.io/instance: process-control
    app.kubernetes.io/part-of: process-control
spec:
  to:
    kind: Service
    name: ui-service
  port:
    targetPort: 1880
  tls:
    termination: edge
